# Online-Monitoring

./: .gitignore  Analysis.ipynb  Brem.ipynb  CMakeLists.txt  COMPOSITE.mac  ImageReconCompton.ipynb  README  RECONPET.ipynb  RECONPET3D.ipynb  RECONPET_true.ipynb  TestEm11.cc  VHEE.mac  c11_sampled.npy  dose_sampled.npy  gamma_sampled.npy  image_data.csv  mac.ipynb  macro2_100_0.mac  macro2_100_10.mac  macro2_100_15.mac  macro2_100_20.mac  macro2_100_25.mac  macro2_100_5.mac  macro2_105_0.mac  macro2_105_10.mac  macro2_105_15.mac  macro2_105_20.mac  macro2_105_25.mac  macro2_105_5.mac  macro2_110_0.mac  macro2_110_10.mac  macro2_110_15.mac  macro2_110_20.mac  macro2_110_25.mac  macro2_110_5.mac  macro2_115_0.mac  macro2_115_10.mac  macro2_115_15.mac  macro2_115_20.mac  macro2_115_25.mac  (+654 more)
include/: ActionInitialization.hh  Detector.hh  DetectorConstruction.hh  EventAction.hh  HistoManager.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  Detector.cc  DetectorConstruction.cc  EventAction.cc  HistoManager.cc  PhysListEmStandard.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
