#----------------------------------------------------------------------------
# Setup the project
cmake_minimum_required(VERSION 3.16...3.21)
project(TestEm11)

#----------------------------------------------------------------------------
# Find Geant4 package, activating all available UI and Vis drivers by default
# You can set WITH_GEANT4_UIVIS to OFF via the command line or ccmake/cmake-gui
# to build a batch mode only executable
#
option(WITH_GEANT4_UIVIS "Build example with Geant4 UI and Vis drivers" ON)
if(WITH_GEANT4_UIVIS)
  find_package(Geant4 REQUIRED ui_all vis_all)
else()
  find_package(Geant4 REQUIRED)
endif()

#----------------------------------------------------------------------------
# Setup Geant4 include directories and compile definitions
#
include(${Geant4_USE_FILE})

#----------------------------------------------------------------------------
# Locate sources and headers for this project
#
include_directories(${PROJECT_SOURCE_DIR}/include 
                    ${Geant4_INCLUDE_DIR})
file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)     

#----------------------------------------------------------------------------
# Add the executable, and link it to the Geant4 libraries
#
add_executable(TestEm11 TestEm11.cc ${sources} ${headers})
target_link_libraries(TestEm11 ${Geant4_LIBRARIES})

#----------------------------------------------------------------------------
# Copy all scripts to the build directory, i.e. the directory in which we
# build TestEm11. This is so that we can run the executable directly because it
# relies on these scripts being in the current working directory.
#
set(TestEm11_SCRIPTS
    alpha.mac ionC12.mac multiLayers.mac radioactive.mac range.mac run01.mac 
    run02.mac sandia.mac TestEm11.in TestEm11.out vis.mac water.mac VHEE.mac
    
    macro_50_2.mac
macro_50_4.mac
macro_50_6.mac
macro_50_8.mac
macro_50_10.mac
macro_50_12.mac
macro_50_14.mac
macro_50_16.mac
macro_50_18.mac
macro_50_20.mac
macro_50_22.mac
macro_50_24.mac
macro_50_26.mac
macro_55_2.mac
macro_55_4.mac
macro_55_6.mac
macro_55_8.mac
macro_55_10.mac
macro_55_12.mac
macro_55_14.mac
macro_55_16.mac
macro_55_18.mac
macro_55_20.mac
macro_55_22.mac
macro_55_24.mac
macro_55_26.mac
macro_60_2.mac
macro_60_4.mac
macro_60_6.mac
macro_60_8.mac
macro_60_10.mac
macro_60_12.mac
macro_60_14.mac
macro_60_16.mac
macro_60_18.mac
macro_60_20.mac
macro_60_22.mac
macro_60_24.mac
macro_60_26.mac
macro_65_2.mac
macro_65_4.mac
macro_65_6.mac
macro_65_8.mac
macro_65_10.mac
macro_65_12.mac
macro_65_14.mac
macro_65_16.mac
macro_65_18.mac
macro_65_20.mac
macro_65_22.mac
macro_65_24.mac
macro_65_26.mac
macro_70_2.mac
macro_70_4.mac
macro_70_6.mac
macro_70_8.mac
macro_70_10.mac
macro_70_12.mac
macro_70_14.mac
macro_70_16.mac
macro_70_18.mac
macro_70_20.mac
macro_70_22.mac
macro_70_24.mac
macro_70_26.mac
macro_75_2.mac
macro_75_4.mac
macro_75_6.mac
macro_75_8.mac
macro_75_10.mac
macro_75_12.mac
macro_75_14.mac
macro_75_16.mac
macro_75_18.mac
macro_75_20.mac
macro_75_22.mac
macro_75_24.mac
macro_75_26.mac
macro_80_2.mac
macro_80_4.mac
macro_80_6.mac
macro_80_8.mac
macro_80_10.mac
macro_80_12.mac
macro_80_14.mac
macro_80_16.mac
macro_80_18.mac
macro_80_20.mac
macro_80_22.mac
macro_80_24.mac
macro_80_26.mac
macro_85_2.mac
macro_85_4.mac
macro_85_6.mac
macro_85_8.mac
macro_85_10.mac
macro_85_12.mac
macro_85_14.mac
macro_85_16.mac
macro_85_18.mac
macro_85_20.mac
macro_85_22.mac
macro_85_24.mac
macro_85_26.mac
macro_90_2.mac
macro_90_4.mac
macro_90_6.mac
macro_90_8.mac
macro_90_10.mac
macro_90_12.mac
macro_90_14.mac
macro_90_16.mac
macro_90_18.mac
macro_90_20.mac
macro_90_22.mac
macro_90_24.mac
macro_90_26.mac
macro_95_2.mac
macro_95_4.mac
macro_95_6.mac
macro_95_8.mac
macro_95_10.mac
macro_95_12.mac
macro_95_14.mac
macro_95_16.mac
macro_95_18.mac
macro_95_20.mac
macro_95_22.mac
macro_95_24.mac
macro_95_26.mac
macro_100_2.mac
macro_100_4.mac
macro_100_6.mac
macro_100_8.mac
macro_100_10.mac
macro_100_12.mac
macro_100_14.mac
macro_100_16.mac
macro_100_18.mac
macro_100_20.mac
macro_100_22.mac
macro_100_24.mac
macro_100_26.mac
macro_105_2.mac
macro_105_4.mac
macro_105_6.mac
macro_105_8.mac
macro_105_10.mac
macro_105_12.mac
macro_105_14.mac
macro_105_16.mac
macro_105_18.mac
macro_105_20.mac
macro_105_22.mac
macro_105_24.mac
macro_105_26.mac
macro_110_2.mac
macro_110_4.mac
macro_110_6.mac
macro_110_8.mac
macro_110_10.mac
macro_110_12.mac
macro_110_14.mac
macro_110_16.mac
macro_110_18.mac
macro_110_20.mac
macro_110_22.mac
macro_110_24.mac
macro_110_26.mac
macro_115_2.mac
macro_115_4.mac
macro_115_6.mac
macro_115_8.mac
macro_115_10.mac
macro_115_12.mac
macro_115_14.mac
macro_115_16.mac
macro_115_18.mac
macro_115_20.mac
macro_115_22.mac
macro_115_24.mac
macro_115_26.mac
macro_120_2.mac
macro_120_4.mac
macro_120_6.mac
macro_120_8.mac
macro_120_10.mac
macro_120_12.mac
macro_120_14.mac
macro_120_16.mac
macro_120_18.mac
macro_120_20.mac
macro_120_22.mac
macro_120_24.mac
macro_120_26.mac
macro_125_2.mac
macro_125_4.mac
macro_125_6.mac
macro_125_8.mac
macro_125_10.mac
macro_125_12.mac
macro_125_14.mac
macro_125_16.mac
macro_125_18.mac
macro_125_20.mac
macro_125_22.mac
macro_125_24.mac
macro_125_26.mac
macro_130_2.mac
macro_130_4.mac
macro_130_6.mac
macro_130_8.mac
macro_130_10.mac
macro_130_12.mac
macro_130_14.mac
macro_130_16.mac
macro_130_18.mac
macro_130_20.mac
macro_130_22.mac
macro_130_24.mac
macro_130_26.mac
macro_135_2.mac
macro_135_4.mac
macro_135_6.mac
macro_135_8.mac
macro_135_10.mac
macro_135_12.mac
macro_135_14.mac
macro_135_16.mac
macro_135_18.mac
macro_135_20.mac
macro_135_22.mac
macro_135_24.mac
macro_135_26.mac
macro_140_2.mac
macro_140_4.mac
macro_140_6.mac
macro_140_8.mac
macro_140_10.mac
macro_140_12.mac
macro_140_14.mac
macro_140_16.mac
macro_140_18.mac
macro_140_20.mac
macro_140_22.mac
macro_140_24.mac
macro_140_26.mac
macro_145_2.mac
macro_145_4.mac
macro_145_6.mac
macro_145_8.mac
macro_145_10.mac
macro_145_12.mac
macro_145_14.mac
macro_145_16.mac
macro_145_18.mac
macro_145_20.mac
macro_145_22.mac
macro_145_24.mac
macro_145_26.mac
macro_150_2.mac
macro_150_4.mac
macro_150_6.mac
macro_150_8.mac
macro_150_10.mac
macro_150_12.mac
macro_150_14.mac
macro_150_16.mac
macro_150_18.mac
macro_150_20.mac
macro_150_22.mac
macro_150_24.mac
macro_150_26.mac
macro2_50_0.mac
macro2_50_5.mac
macro2_50_10.mac
macro2_50_15.mac
macro2_50_20.mac
macro2_50_25.mac
macro2_55_0.mac
macro2_55_5.mac
macro2_55_10.mac
macro2_55_15.mac
macro2_55_20.mac
macro2_55_25.mac
macro2_60_0.mac
macro2_60_5.mac
macro2_60_10.mac
macro2_60_15.mac
macro2_60_20.mac
macro2_60_25.mac
macro2_65_0.mac
macro2_65_5.mac
macro2_65_10.mac
macro2_65_15.mac
macro2_65_20.mac
macro2_65_25.mac
macro2_70_0.mac
macro2_70_5.mac
macro2_70_10.mac
macro2_70_15.mac
macro2_70_20.mac
macro2_70_25.mac
macro2_75_0.mac
macro2_75_5.mac
macro2_75_10.mac
macro2_75_15.mac
macro2_75_20.mac
macro2_75_25.mac
macro2_80_0.mac
macro2_80_5.mac
macro2_80_10.mac
macro2_80_15.mac
macro2_80_20.mac
macro2_80_25.mac
macro2_85_0.mac
macro2_85_5.mac
macro2_85_10.mac
macro2_85_15.mac
macro2_85_20.mac
macro2_85_25.mac
macro2_90_0.mac
macro2_90_5.mac
macro2_90_10.mac
macro2_90_15.mac
macro2_90_20.mac
macro2_90_25.mac
macro2_95_0.mac
macro2_95_5.mac
macro2_95_10.mac
macro2_95_15.mac
macro2_95_20.mac
macro2_95_25.mac
macro2_100_0.mac
macro2_100_5.mac
macro2_100_10.mac
macro2_100_15.mac
macro2_100_20.mac
macro2_100_25.mac
macro2_105_0.mac
macro2_105_5.mac
macro2_105_10.mac
macro2_105_15.mac
macro2_105_20.mac
macro2_105_25.mac
macro2_110_0.mac
macro2_110_5.mac
macro2_110_10.mac
macro2_110_15.mac
macro2_110_20.mac
macro2_110_25.mac
macro2_115_0.mac
macro2_115_5.mac
macro2_115_10.mac
macro2_115_15.mac
macro2_115_20.mac
macro2_115_25.mac
macro2_120_0.mac
macro2_120_5.mac
macro2_120_10.mac
macro2_120_15.mac
macro2_120_20.mac
macro2_120_25.mac
macro2_125_0.mac
macro2_125_5.mac
macro2_125_10.mac
macro2_125_15.mac
macro2_125_20.mac
macro2_125_25.mac
macro2_130_0.mac
macro2_130_5.mac
macro2_130_10.mac
macro2_130_15.mac
macro2_130_20.mac
macro2_130_25.mac
macro2_135_0.mac
macro2_135_5.mac
macro2_135_10.mac
macro2_135_15.mac
macro2_135_20.mac
macro2_135_25.mac
macro2_140_0.mac
macro2_140_5.mac
macro2_140_10.mac
macro2_140_15.mac
macro2_140_20.mac
macro2_140_25.mac
macro2_145_0.mac
macro2_145_5.mac
macro2_145_10.mac
macro2_145_15.mac
macro2_145_20.mac
macro2_145_25.mac
macro2_150_0.mac
macro2_150_5.mac
macro2_150_10.mac
macro2_150_15.mac
macro2_150_20.mac
macro2_150_25.mac
macroB_50_2.mac
macroB_50_4.mac
macroB_50_6.mac
macroB_50_8.mac
macroB_50_10.mac
macroB_50_12.mac
macroB_50_14.mac
macroB_50_16.mac
macroB_50_18.mac
macroB_50_20.mac
macroB_50_22.mac
macroB_50_24.mac
macroB_50_26.mac
macroB_55_2.mac
macroB_55_4.mac
macroB_55_6.mac
macroB_55_8.mac
macroB_55_10.mac
macroB_55_12.mac
macroB_55_14.mac
macroB_55_16.mac
macroB_55_18.mac
macroB_55_20.mac
macroB_55_22.mac
macroB_55_24.mac
macroB_55_26.mac
macroB_60_2.mac
macroB_60_4.mac
macroB_60_6.mac
macroB_60_8.mac
macroB_60_10.mac
macroB_60_12.mac
macroB_60_14.mac
macroB_60_16.mac
macroB_60_18.mac
macroB_60_20.mac
macroB_60_22.mac
macroB_60_24.mac
macroB_60_26.mac
macroB_65_2.mac
macroB_65_4.mac
macroB_65_6.mac
macroB_65_8.mac
macroB_65_10.mac
macroB_65_12.mac
macroB_65_14.mac
macroB_65_16.mac
macroB_65_18.mac
macroB_65_20.mac
macroB_65_22.mac
macroB_65_24.mac
macroB_65_26.mac
macroB_70_2.mac
macroB_70_4.mac
macroB_70_6.mac
macroB_70_8.mac
macroB_70_10.mac
macroB_70_12.mac
macroB_70_14.mac
macroB_70_16.mac
macroB_70_18.mac
macroB_70_20.mac
macroB_70_22.mac
macroB_70_24.mac
macroB_70_26.mac
macroB_75_2.mac
macroB_75_4.mac
macroB_75_6.mac
macroB_75_8.mac
macroB_75_10.mac
macroB_75_12.mac
macroB_75_14.mac
macroB_75_16.mac
macroB_75_18.mac
macroB_75_20.mac
macroB_75_22.mac
macroB_75_24.mac
macroB_75_26.mac
macroB_80_2.mac
macroB_80_4.mac
macroB_80_6.mac
macroB_80_8.mac
macroB_80_10.mac
macroB_80_12.mac
macroB_80_14.mac
macroB_80_16.mac
macroB_80_18.mac
macroB_80_20.mac
macroB_80_22.mac
macroB_80_24.mac
macroB_80_26.mac
macroB_85_2.mac
macroB_85_4.mac
macroB_85_6.mac
macroB_85_8.mac
macroB_85_10.mac
macroB_85_12.mac
macroB_85_14.mac
macroB_85_16.mac
macroB_85_18.mac
macroB_85_20.mac
macroB_85_22.mac
macroB_85_24.mac
macroB_85_26.mac
macroB_90_2.mac
macroB_90_4.mac
macroB_90_6.mac
macroB_90_8.mac
macroB_90_10.mac
macroB_90_12.mac
macroB_90_14.mac
macroB_90_16.mac
macroB_90_18.mac
macroB_90_20.mac
macroB_90_22.mac
macroB_90_24.mac
macroB_90_26.mac
macroB_95_2.mac
macroB_95_4.mac
macroB_95_6.mac
macroB_95_8.mac
macroB_95_10.mac
macroB_95_12.mac
macroB_95_14.mac
macroB_95_16.mac
macroB_95_18.mac
macroB_95_20.mac
macroB_95_22.mac
macroB_95_24.mac
macroB_95_26.mac
macroB_100_2.mac
macroB_100_4.mac
macroB_100_6.mac
macroB_100_8.mac
macroB_100_10.mac
macroB_100_12.mac
macroB_100_14.mac
macroB_100_16.mac
macroB_100_18.mac
macroB_100_20.mac
macroB_100_22.mac
macroB_100_24.mac
macroB_100_26.mac
macroB_105_2.mac
macroB_105_4.mac
macroB_105_6.mac
macroB_105_8.mac
macroB_105_10.mac
macroB_105_12.mac
macroB_105_14.mac
macroB_105_16.mac
macroB_105_18.mac
macroB_105_20.mac
macroB_105_22.mac
macroB_105_24.mac
macroB_105_26.mac
macroB_110_2.mac
macroB_110_4.mac
macroB_110_6.mac
macroB_110_8.mac
macroB_110_10.mac
macroB_110_12.mac
macroB_110_14.mac
macroB_110_16.mac
macroB_110_18.mac
macroB_110_20.mac
macroB_110_22.mac
macroB_110_24.mac
macroB_110_26.mac
macroB_115_2.mac
macroB_115_4.mac
macroB_115_6.mac
macroB_115_8.mac
macroB_115_10.mac
macroB_115_12.mac
macroB_115_14.mac
macroB_115_16.mac
macroB_115_18.mac
macroB_115_20.mac
macroB_115_22.mac
macroB_115_24.mac
macroB_115_26.mac
macroB_120_2.mac
macroB_120_4.mac
macroB_120_6.mac
macroB_120_8.mac
macroB_120_10.mac
macroB_120_12.mac
macroB_120_14.mac
macroB_120_16.mac
macroB_120_18.mac
macroB_120_20.mac
macroB_120_22.mac
macroB_120_24.mac
macroB_120_26.mac
macroB_125_2.mac
macroB_125_4.mac
macroB_125_6.mac
macroB_125_8.mac
macroB_125_10.mac
macroB_125_12.mac
macroB_125_14.mac
macroB_125_16.mac
macroB_125_18.mac
macroB_125_20.mac
macroB_125_22.mac
macroB_125_24.mac
macroB_125_26.mac
macroB_130_2.mac
macroB_130_4.mac
macroB_130_6.mac
macroB_130_8.mac
macroB_130_10.mac
macroB_130_12.mac
macroB_130_14.mac
macroB_130_16.mac
macroB_130_18.mac
macroB_130_20.mac
macroB_130_22.mac
macroB_130_24.mac
macroB_130_26.mac
macroB_135_2.mac
macroB_135_4.mac
macroB_135_6.mac
macroB_135_8.mac
macroB_135_10.mac
macroB_135_12.mac
macroB_135_14.mac
macroB_135_16.mac
macroB_135_18.mac
macroB_135_20.mac
macroB_135_22.mac
macroB_135_24.mac
macroB_135_26.mac
macroB_140_2.mac
macroB_140_4.mac
macroB_140_6.mac
macroB_140_8.mac
macroB_140_10.mac
macroB_140_12.mac
macroB_140_14.mac
macroB_140_16.mac
macroB_140_18.mac
macroB_140_20.mac
macroB_140_22.mac
macroB_140_24.mac
macroB_140_26.mac
macroB_145_2.mac
macroB_145_4.mac
macroB_145_6.mac
macroB_145_8.mac
macroB_145_10.mac
macroB_145_12.mac
macroB_145_14.mac
macroB_145_16.mac
macroB_145_18.mac
macroB_145_20.mac
macroB_145_22.mac
macroB_145_24.mac
macroB_145_26.mac
macroB_150_2.mac
macroB_150_4.mac
macroB_150_6.mac
macroB_150_8.mac
macroB_150_10.mac
macroB_150_12.mac
macroB_150_14.mac
macroB_150_16.mac
macroB_150_18.mac
macroB_150_20.mac
macroB_150_22.mac
macroB_150_24.mac
macroB_150_26.mac  
macrofull_50_30.mac
macrofull_60_30.mac
macrofull_70_30.mac
macrofull_80_30.mac
macrofull_90_30.mac
macrofull_100_30.mac
macrofull_110_30.mac
macrofull_120_30.mac
macrofull_130_30.mac
macrofull_140_30.mac
macrofull_150_30.mac

)
  
foreach(_script ${TestEm11_SCRIPTS})
  configure_file(
    ${PROJECT_SOURCE_DIR}/${_script}
    ${PROJECT_BINARY_DIR}/${_script}
    COPYONLY
    )
endforeach()

#----------------------------------------------------------------------------
# Install the executable to 'bin' directory under CMAKE_INSTALL_PREFIX
#
install(TARGETS TestEm11 DESTINATION bin)

